# libstream

./: .gitignore  CMakeLists.txt  README.md
cmake/: fetch_gtest.cmake
include/: BitReader.h  Reader.h  libstream.h
include/libstream/: BitReader.h  Reader.h
src/: BitReader.c  Reader.c  generateImplementation.py  generatedImplementation.c  read.c  readNumber.inc
test/: CMakeLists.txt  MockReader.cpp  MockReader.hpp  ReaderTest.cpp
test/BitReaderTest/: BitReaderTest.cpp  CMakeLists.txt
test/ReaderTest/: CMakeLists.txt
test/common/: MockReader.hpp
